--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Poaching -- Great Britain'
 - !lcc 'SK'
 - !lcsh 'Poachers -- Great Britain'
+- GITenberg
 title: Poachers and Poaching
 url: http://www.gutenberg.org/ebooks/42628
